<resources>
    <string name="app_name">snake_game</string>
    <string name="game_over_message">Game Over! Play Again</string>
    <string name="new_game">New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="up">UP</string>
    <string name="left">LEFT</string>
    <string name="pause">Pause</string>
    <string name="right">RIGHT</string>
    <string name="down">DOWN</string>
    <string name="score_text">score: %d</string>
    <string name="your_score_text">your score is %d</string>
</resources>
