<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/score2"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:background="@color/dark_red"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/lilu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="390sp"
        android:layout_height="390sp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/score"
            android:background="@color/black"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/board"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:textSize="15sp"
            android:text="@string/game_over_message" />

        <Button
            android:id="@+id/new_game"
            android:background="@color/purple_700"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/new_game"/>

        <Button
            android:id="@+id/resume"
            android:background="@color/purple_700"
            android:layout_width="150sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_game"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:text="@string/resume_game"/>

        <Button
            android:id="@+id/playagain"
            android:background="@color/red"
            android:layout_width="150sp"
            android:textAlignment="center"
            android:layout_height="80sp"
            android:layout_below="@id/resume"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/game_over_message"/>

        <RelativeLayout
            android:id="@+id/board"
            android:layout_width="380sp"
            android:layout_height="380sp"
            android:background="@color/black"
            android:gravity="center"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lilu"
        android:layout_width="330sp"
        android:layout_height="330sp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100sp">

            <Button
                android:id="@+id/up"
                android:layout_margin="10sp"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/up"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp">

            <Button
                android:id="@+id/left"
                android:layout_margin="10sp"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/left"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/pause"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pause" />

            <Button
                android:id="@+id/right"
                android:layout_margin="10sp"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/right"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100sp">

            <Button
                android:id="@+id/down"
                android:layout_margin="10sp"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/down"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>